[tool.poetry]
name = "sd-ext"
version = "0.1.0"
description = ""
authors = ["rockerBOO <rockerboo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length=79

[tool.ruff]
line-length=79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
