[project]
name = "sd-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.3",
    "datasets>=3.4.1",
    "diffusers>=0.32.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "moderngl>=5.12.0",
    "peft>=0.15.0",
    "pixeloe>=0.1.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.3",
    "wandb>=0.19.8",
]

[tool.ruff]
line-length = 120

[tool.uv.workspace]
members = ["packages/*", "servers/clip_score"]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
